have a nice day!

--- a/indexes/nsc1025/97.md
+++ b/indexes/nsc1025/97.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：从“六四”到瘟疫 红祸殃及全世界](../../pages/nsc1025/n12996948.md) 
+#### [周晓辉：四人帮替毛担罪责 邓小平六四镇压添血债](../../pages/nsc1025/n12996229.md) 
+#### [【纪元专栏】疫期封锁代价太大 应该反思](../../pages/nsc1025/n12994425.md) 
+#### [【有冇搞错】改变了世界的八九六四](../../pages/nsc1025/n12995659.md) 
+#### [笔耕：流氓软件为何流氓](../../pages/nsc1025/n12995895.md) 
+#### [田云：大陆电影《悬崖之上》为何被观众吐槽](../../pages/nsc1025/n12994869.md) 
 #### [古风：中共政权崩溃只缺一个爆发契机](../../pages/nsc1025/n12995431.md) 
 #### [王友群：习近平加强对“一把手”监督有四难](../../pages/nsc1025/n12994602.md) 
 #### [沈舟：中共16军机南海挑衅露软肋](../../pages/nsc1025/n12994739.md) 
@@ -24,12 +30,6 @@
 #### [【名家专栏】中美间仍是“旧冷战”的延续](../../pages/nsc1025/n12991229.md) 
 #### [周晓辉：尼克松访华留遗害 中共入联合国有内幕](../../pages/nsc1025/n12991422.md) 
 #### [岳山：重庆未扫平 陈敏尔翻薄王美女交警队旧账](../../pages/nsc1025/n12991090.md) 
-#### [【有冇搞错】美国文革的阴谋正在推动中](../../pages/nsc1025/n12990826.md) 
-#### [袁斌：马拉松21死事件，牧羊人为何改口？](../../pages/nsc1025/n12990555.md) 
-#### [田云：唐吉田律师被禁出境探病女 中共无人道](../../pages/nsc1025/n12989738.md) 
-#### [王友群：我对清算中共独裁者江泽民罪恶的想法](../../pages/nsc1025/n12990272.md) 
-#### [钟原：广东疫情还能盖住吗？](../../pages/nsc1025/n12989025.md) 
-#### [【名家专栏】中国的假朋友：俄罗斯](../../pages/nsc1025/n12988460.md) 
 
 ---
-#### 第 [ [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) / [89](./89.md) ] 页
+#### 第 [ [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) ] 页
