have a nice day!

--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：毛泽东的接班人林彪之死](../../pages/nsc1028/n12997401.md) 
+#### [中共罪行录之二十二：少年“反革命”](../../pages/nsc1028/n12998426.md) 
 #### [王友群：毛泽东的接班人刘少奇之死](../../pages/nsc1028/n12991772.md) 
 #### [被遗忘的百年历史（III）1976至1989](../../pages/nsc1028/n12991962.md) 
 #### [被遗忘的百年历史（II）1950 至1976](../../pages/nsc1028/n12989161.md) 
@@ -28,8 +30,6 @@
 #### [共产暴政录：长春围城饿毙几十万人真相](../../pages/nsc1028/n10757327.md) 
 #### [王友群：第七任中共党魁华国锋的最后结局](../../pages/nsc1028/n12918457.md) 
 #### [周晓辉：中共开七大时暗中勾结日军 后感谢侵华](../../pages/nsc1028/n12921960.md) 
-#### [张菁： 反右中一根绳子吊死一对夫妻](../../pages/nsc1028/n12921925.md) 
-#### [袁斌：编造出来的“南霸天”](../../pages/nsc1028/n12921133.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
