--- a/indexes/nsc993/53.md
+++ b/indexes/nsc993/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共欠全世界一个交代](../../pages/nsc993/n12998706.md) 
+#### [千百度：一位西双版纳建筑商的感恩](../../pages/nsc993/n12998487.md) 
 #### [【网海拾贝】中共砖家把老百姓当成了动物](../../pages/nsc993/n12993483.md) 
 #### [宋征时：我带考卷来维权](../../pages/nsc993/n12994088.md) 
 #### [陈达：逃大难赶早](../../pages/nsc993/n12993569.md) 
@@ -28,8 +30,6 @@
 #### [可可：广东警方威胁牛腾宇母亲的原因](../../pages/nsc993/n12971100.md) 
 #### [金浴凤：红楼春·文革招魂曲](../../pages/nsc993/n12970354.md) 
 #### [千瑞：末时景](../../pages/nsc993/n12970337.md) 
-#### [魏京生：中共企图在巴以冲突中渔翁得利](../../pages/nsc993/n12970286.md) 
-#### [宋征时：我找到的六四军人](../../pages/nsc993/n12970213.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
