have a nice day!

--- a/indexes/nsc1025/98.md
+++ b/indexes/nsc1025/98.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [韦拓：袁隆平去世 当局借机造神 难掩政权危机](../../pages/nsc1025/n13001388.md) 
 #### [福奇电邮：去年1月注意到病毒或从实验室泄漏](../../pages/nsc1025/n13000275.md) 
 #### [程晓农：共产党政权的生存焦虑](../../pages/nsc1025/n13001674.md) 
 #### [探秘世界各国的真实军力—美军有多强（六）](../../pages/nsc1025/n13001362.md) 
@@ -29,7 +30,6 @@
 #### [【纪元专栏】疫期封锁代价太大 应该反思](../../pages/nsc1025/n12994425.md) 
 #### [【有冇搞错】改变了世界的八九六四](../../pages/nsc1025/n12995659.md) 
 #### [笔耕：流氓软件为何流氓](../../pages/nsc1025/n12995895.md) 
-#### [田云：大陆电影《悬崖之上》为何被观众吐槽](../../pages/nsc1025/n12994869.md) 
 
 ---
-#### 第 [ [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) / [90](./90.md) ] 页
+#### 第 [ [98](./98.md) / [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) ] 页
