have a nice day!

--- a/indexes/nsc1025/98.md
+++ b/indexes/nsc1025/98.md
@@ -1,5 +1,14 @@
 ### 纪元评论：时政评论
 ---
+#### [袁斌：中共是如何让年轻一代遗忘8964的？](../../pages/nsc1025/n13002646.md) 
+#### [田云：安徽随机杀人案戳破中共“安全”谎言](../../pages/nsc1025/n13002188.md) 
+#### [谭笑飞：躺平的最高境界是三退](../../pages/nsc1025/n13002385.md) 
+#### [清竹：一旦上了贼船 您知道如何才能下来吗？](../../pages/nsc1025/n13002292.md) 
+#### [觅真：“六一零”是中共迫害法轮功的主要帮凶](../../pages/nsc1025/n13002234.md) 
+#### [王友群：中共为什么阻挠台湾获得德日疫苗？](../../pages/nsc1025/n13002032.md) 
+#### [【名家专栏】福布斯等媒体应由美国自己拥有](../../pages/nsc1025/n13001319.md) 
+#### [加州游民资金花在哪里？别被政客利用同情心](../../pages/nsc1025/n13000196.md) 
+#### [【名家专栏】中美贸易正在发生根本变化](../../pages/nsc1025/n13001247.md) 
 #### [韦拓：袁隆平去世 当局借机造神 难掩政权危机](../../pages/nsc1025/n13001388.md) 
 #### [福奇电邮：去年1月注意到病毒或从实验室泄漏](../../pages/nsc1025/n13000275.md) 
 #### [程晓农：共产党政权的生存焦虑](../../pages/nsc1025/n13001674.md) 
@@ -21,15 +30,6 @@
 #### [何清涟：反种族歧视 身份政治的道义包装](../../pages/nsc1025/n12997644.md) 
 #### [秦晋：不要轻看新一代的“躺平主义”](../../pages/nsc1025/n12997460.md) 
 #### [“六四”三十二年与中共对青年的深度扼杀](../../pages/nsc1025/n12997357.md) 
-#### [伯林格姆：国会大厦事件怎能与911恐袭相比](../../pages/nsc1025/n12997322.md) 
-#### [【名家专栏】中共倾销摧毁美个人防护品产业](../../pages/nsc1025/n12996157.md) 
-#### [新州：中共的毒疫苗毒在哪里？](../../pages/nsc1025/n12997235.md) 
-#### [谢田：人类世界何以变得越来越不堪](../../pages/nsc1025/n12997192.md) 
-#### [钟原：从“六四”到瘟疫 红祸殃及全世界](../../pages/nsc1025/n12996948.md) 
-#### [周晓辉：四人帮替毛担罪责 邓小平六四镇压添血债](../../pages/nsc1025/n12996229.md) 
-#### [【纪元专栏】疫期封锁代价太大 应该反思](../../pages/nsc1025/n12994425.md) 
-#### [【有冇搞错】改变了世界的八九六四](../../pages/nsc1025/n12995659.md) 
-#### [笔耕：流氓软件为何流氓](../../pages/nsc1025/n12995895.md) 
 
 ---
 #### 第 [ [98](./98.md) / [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) ] 页
