--- a/indexes/nsc1028/51.md
+++ b/indexes/nsc1028/51.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [高僧：你办案时心里真有国法吗？](../../pages/nsc1028/n13002424.md) 
+#### [韩战时美国排华风暴 纽约华人曾如何应付危局](../../pages/nsc1028/n13002345.md) 
 #### [王友群：毛泽东的接班人林彪之死](../../pages/nsc1028/n12997401.md) 
 #### [中共罪行录之二十二：少年“反革命”](../../pages/nsc1028/n12998426.md) 
 #### [王友群：毛泽东的接班人刘少奇之死](../../pages/nsc1028/n12991772.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：子虚乌有的“资产阶级右派的猖狂进攻”](../../pages/nsc1028/n12925599.md) 
 #### [袁斌：“周扒皮”的故事纯属虚构](../../pages/nsc1028/n12923274.md) 
 #### [共产暴政录：长春围城饿毙几十万人真相](../../pages/nsc1028/n10757327.md) 
-#### [王友群：第七任中共党魁华国锋的最后结局](../../pages/nsc1028/n12918457.md) 
-#### [周晓辉：中共开七大时暗中勾结日军 后感谢侵华](../../pages/nsc1028/n12921960.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
