--- a/indexes/nsc993/53.md
+++ b/indexes/nsc993/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共屠杀了成千上万64抗议者](../../pages/nsc993/n13002713.md) 
+#### [金浴凤：“六·四”的伤痕（两篇）](../../pages/nsc993/n13001719.md) 
 #### [【网海拾贝】国安法下港人悼念“六四”的意义](../../pages/nsc993/n13001039.md) 
 #### [袁斌：又到六四 网民翻墙到海外网络表达哀思](../../pages/nsc993/n13000995.md) 
 #### [颜纯钩：正义可能迟到，但不会永远缺席](../../pages/nsc993/n13000920.md) 
@@ -28,8 +30,6 @@
 #### [千百度：躺平主义和加速主义，哪个对社会冲击更大？](../../pages/nsc993/n12985512.md) 
 #### [林泉：论认命可以而躺平不行](../../pages/nsc993/n12985505.md) 
 #### [【网海拾贝】必须查清中共病毒起源的真相](../../pages/nsc993/n12984276.md) 
-#### [林泉：躺平也是一种战斗](../../pages/nsc993/n12984194.md) 
-#### [【网海拾贝】中共政权就建立在谎言上](../../pages/nsc993/n12981880.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
