--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [教育家为何担心个人主义衰败胜过原子弹？](../../pages/nsc1035/n13002969.md) 
 #### [李田田：成人化的“儿童节”真的童趣盎然吗？](../../pages/nsc1035/n13000386.md) 
 #### [清竹：超凡入圣的绘画震撼了我的心](../../pages/nsc1035/n12993985.md) 
 #### [跨时空智慧：古老中国的自我提高艺术](../../pages/nsc1035/n12988506.md) 
@@ -29,7 +30,6 @@
 #### [觅真：泪水撒在清明节！](../../pages/nsc1035/n12857953.md) 
 #### [宋善：世界卫生日的省思](../../pages/nsc1035/n12855911.md) 
 #### [陆言：对幼儿园学党史的一点感想](../../pages/nsc1035/n12851128.md) 
-#### [伊利夏提：消失在集中营的红衣女孩儿](../../pages/nsc1035/n12848360.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
