--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李勇：历史秘闻——张学良自评历史功过](../../pages/nsc1028/n13004467.md) 
 #### [张菁：中共“长征”中的绑票筹款亲历者](../../pages/nsc1028/n13003575.md) 
 #### [高僧：你办案时心里真有国法吗？](../../pages/nsc1028/n13002424.md) 
 #### [韩战时美国排华风暴 纽约华人曾如何应付危局](../../pages/nsc1028/n13002345.md) 
@@ -29,7 +30,6 @@
 #### [王友群：第十任中共党魁江泽民面临的最后结局](../../pages/nsc1028/n12933748.md) 
 #### [中共罪行录之十二：“无产阶级文化大革命”](../../pages/nsc1028/n12928000.md) 
 #### [袁斌：子虚乌有的“资产阶级右派的猖狂进攻”](../../pages/nsc1028/n12925599.md) 
-#### [袁斌：“周扒皮”的故事纯属虚构](../../pages/nsc1028/n12923274.md) 
 
 ---
-#### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
+#### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
