have a nice day!

--- a/indexes/nsc1025/99.md
+++ b/indexes/nsc1025/99.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【有冇搞错】王沪宁失势和内部毛派被抓](../../pages/nsc1025/n13007238.md) 
+#### [李林一：中共对欧四大战略支柱现裂痕](../../pages/nsc1025/n13008149.md) 
+#### [陈思敏：复旦血案折射高校“青椒非升即走”之困](../../pages/nsc1025/n13007131.md) 
 #### [田云：党媒吹捧社会主义 中共百年误国害民](../../pages/nsc1025/n13006682.md) 
 #### [袁斌：“这就是世界上最安全的国家吗？”](../../pages/nsc1025/n13006971.md) 
 #### [李正宽：复旦院党委书记被杀 中共为何讳莫如深](../../pages/nsc1025/n13006751.md) 
@@ -27,9 +30,6 @@
 #### [觅真：“六一零”是中共迫害法轮功的主要帮凶](../../pages/nsc1025/n13002234.md) 
 #### [王友群：中共为什么阻挠台湾获得德日疫苗？](../../pages/nsc1025/n13002032.md) 
 #### [【名家专栏】福布斯等媒体应由美国自己拥有](../../pages/nsc1025/n13001319.md) 
-#### [加州游民资金花在哪里？别被政客利用同情心](../../pages/nsc1025/n13000196.md) 
-#### [【名家专栏】中美贸易正在发生根本变化](../../pages/nsc1025/n13001247.md) 
-#### [韦拓：袁隆平去世 当局借机造神 难掩政权危机](../../pages/nsc1025/n13001388.md) 
 
 ---
-#### 第 [ [98](./98.md) / [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) / [91](./91.md) ] 页
+#### 第 [ [99](./99.md) / [98](./98.md) / [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) ] 页
