have a nice day!

--- a/indexes/nsc1025/99.md
+++ b/indexes/nsc1025/99.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】疯狂的2020年乱象会持续吗？](../../pages/nsc1025/n13010369.md) 
+#### [金言：中共地方政府将告别卖地为生的时代](../../pages/nsc1025/n13009847.md) 
+#### [乾龙：从“扒房牵牛”到“避孕违规”，党员缘何死于党手](../../pages/nsc1025/n13009248.md) 
+#### [王赫：土地出让金划转税务征收释何信号？](../../pages/nsc1025/n13008810.md) 
+#### [王友群：中共最高级别叛逃者引发连锁反应？](../../pages/nsc1025/n13008688.md) 
+#### [周晓辉：推反外国制裁法 中共将法律武器化](../../pages/nsc1025/n13008450.md) 
+#### [【名家专栏】美国资助武汉病毒所的明确证据](../../pages/nsc1025/n13007706.md) 
 #### [【有冇搞错】王沪宁失势和内部毛派被抓](../../pages/nsc1025/n13007238.md) 
 #### [李林一：中共对欧四大战略支柱现裂痕](../../pages/nsc1025/n13008149.md) 
 #### [陈思敏：复旦血案折射高校“青椒非升即走”之困](../../pages/nsc1025/n13007131.md) 
@@ -23,13 +30,6 @@
 #### [周晓辉：欧盟将祭出制裁机制 北京再受打击](../../pages/nsc1025/n13003599.md) 
 #### [杨威：追责中共隐瞒疫情 美国再临大考](../../pages/nsc1025/n13003542.md) 
 #### [海外台湾侨社应慎防中共认知战入侵](../../pages/nsc1025/n13003571.md) 
-#### [袁斌：中共是如何让年轻一代遗忘8964的？](../../pages/nsc1025/n13002646.md) 
-#### [田云：安徽随机杀人案戳破中共“安全”谎言](../../pages/nsc1025/n13002188.md) 
-#### [谭笑飞：躺平的最高境界是三退](../../pages/nsc1025/n13002385.md) 
-#### [清竹：一旦上了贼船 您知道如何才能下来吗？](../../pages/nsc1025/n13002292.md) 
-#### [觅真：“六一零”是中共迫害法轮功的主要帮凶](../../pages/nsc1025/n13002234.md) 
-#### [王友群：中共为什么阻挠台湾获得德日疫苗？](../../pages/nsc1025/n13002032.md) 
-#### [【名家专栏】福布斯等媒体应由美国自己拥有](../../pages/nsc1025/n13001319.md) 
 
 ---
 #### 第 [ [99](./99.md) / [98](./98.md) / [97](./97.md) / [96](./96.md) / [95](./95.md) / [94](./94.md) / [93](./93.md) / [92](./92.md) ] 页
