--- a/indexes/nsc993/53.md
+++ b/indexes/nsc993/53.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】有一个地方的记忆 你怎么也抹不掉](../../pages/nsc993/n13009802.md) 
+#### [古风：中共企图通过假美钞搞乱美国金融市场](../../pages/nsc993/n13009626.md) 
 #### [【网海拾贝】反共是最大的政治正确](../../pages/nsc993/n13007051.md) 
 #### [【网海拾贝】中共屠杀了成千上万64抗议者](../../pages/nsc993/n13002713.md) 
 #### [金浴凤：“六·四”的伤痕（两篇）](../../pages/nsc993/n13001719.md) 
@@ -28,8 +30,6 @@
 #### [李勇：FBI安邦定国故事（上）](../../pages/nsc993/n12987749.md) 
 #### [【网海拾贝】政法系大劫来临？](../../pages/nsc993/n12987596.md) 
 #### [【网海拾贝】中共何时对得起纳税人了？](../../pages/nsc993/n12985578.md) 
-#### [千百度：躺平主义和加速主义，哪个对社会冲击更大？](../../pages/nsc993/n12985512.md) 
-#### [林泉：论认命可以而躺平不行](../../pages/nsc993/n12985505.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
