--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【中共党史】建党的罪恶本质：苏联豢养](../../pages/nsc1028/n13011888.md) 
 #### [中共罪行录之二十三：三年级的“地主分子”](../../pages/nsc1028/n13009729.md) 
 #### [李勇：历史秘闻——张学良自评历史功过](../../pages/nsc1028/n13004467.md) 
 #### [张菁：中共“长征”中的绑票筹款亲历者](../../pages/nsc1028/n13003575.md) 
@@ -29,7 +30,6 @@
 #### [花丛中的骑士：骑士精神简史](../../pages/nsc1028/n12952850.md) 
 #### [袁斌：毛的帝王般生活 却宣传成“与人民同甘共苦”](../../pages/nsc1028/n12938801.md) 
 #### [王友群：第十任中共党魁江泽民面临的最后结局](../../pages/nsc1028/n12933748.md) 
-#### [中共罪行录之十二：“无产阶级文化大革命”](../../pages/nsc1028/n12928000.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
