--- a/indexes/nsc993/53.md
+++ b/indexes/nsc993/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共如何影响各国的报导](../../pages/nsc993/n13012599.md) 
 #### [【网海拾贝】有一个地方的记忆 你怎么也抹不掉](../../pages/nsc993/n13009802.md) 
 #### [古风：中共企图通过假美钞搞乱美国金融市场](../../pages/nsc993/n13009626.md) 
 #### [【网海拾贝】反共是最大的政治正确](../../pages/nsc993/n13007051.md) 
@@ -29,7 +30,6 @@
 #### [读者投书：非止六四](../../pages/nsc993/n12989673.md) 
 #### [李勇：FBI安邦定国故事（上）](../../pages/nsc993/n12987749.md) 
 #### [【网海拾贝】政法系大劫来临？](../../pages/nsc993/n12987596.md) 
-#### [【网海拾贝】中共何时对得起纳税人了？](../../pages/nsc993/n12985578.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
