--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [被遗忘的百年历史（V）2001至2005](../../pages/nsc1028/n13001609.md) 
+#### [中共罪行录之二十四：被冤杀的“伪乡长”](../../pages/nsc1028/n13015342.md) 
+#### [【名家专栏】人口炸弹突然成了人口泡沫](../../pages/nsc1028/n13012901.md) 
 #### [【中共党史】建党的罪恶本质：苏联豢养](../../pages/nsc1028/n13011888.md) 
 #### [中共罪行录之二十三：三年级的“地主分子”](../../pages/nsc1028/n13009729.md) 
 #### [李勇：历史秘闻——张学良自评历史功过](../../pages/nsc1028/n13004467.md) 
@@ -27,9 +30,6 @@
 #### [中共罪行录之十三：在河北安国县的勒索和欺诈](../../pages/nsc1028/n12959911.md) 
 #### [袁斌：“延安整风”中毛泽东是怎样伪造中共历史的](../../pages/nsc1028/n12957562.md) 
 #### [王友群：批“党天下”的大右派储安平失踪之谜](../../pages/nsc1028/n12954229.md) 
-#### [花丛中的骑士：骑士精神简史](../../pages/nsc1028/n12952850.md) 
-#### [袁斌：毛的帝王般生活 却宣传成“与人民同甘共苦”](../../pages/nsc1028/n12938801.md) 
-#### [王友群：第十任中共党魁江泽民面临的最后结局](../../pages/nsc1028/n12933748.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
