--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：延安的1万5千个特务是怎么回事？](../../pages/nsc1028/n13016395.md) 
 #### [被遗忘的百年历史（V）2001至2005](../../pages/nsc1028/n13001609.md) 
 #### [中共罪行录之二十四：被冤杀的“伪乡长”](../../pages/nsc1028/n13015342.md) 
 #### [【名家专栏】人口炸弹突然成了人口泡沫](../../pages/nsc1028/n13012901.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之十四：在太行山区摧毁传统文化](../../pages/nsc1028/n12962619.md) 
 #### [中共罪行录之十三：在河北安国县的勒索和欺诈](../../pages/nsc1028/n12959911.md) 
 #### [袁斌：“延安整风”中毛泽东是怎样伪造中共历史的](../../pages/nsc1028/n12957562.md) 
-#### [王友群：批“党天下”的大右派储安平失踪之谜](../../pages/nsc1028/n12954229.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
