have a nice day!

--- a/indexes/nsc993/53.md
+++ b/indexes/nsc993/53.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [张彼特：给儿子的忠告](../../pages/nsc993/n13018934.md) 
+#### [祝君安：长相思‧躺平乐（外一篇）](../../pages/nsc993/n13018923.md) 
+#### [清竹：被邪灵附体后 该如何摆脱？](../../pages/nsc993/n13018877.md) 
 #### [【网海拾贝】中共抵制病毒起源调查令人生疑](../../pages/nsc993/n13017785.md) 
 #### [东方觉：奇事奇闻 雷人雷语](../../pages/nsc993/n13017577.md) 
 #### [慧真：“三胎”民谣](../../pages/nsc993/n13017394.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】中共砖家把老百姓当成了动物](../../pages/nsc993/n12993483.md) 
 #### [宋征时：我带考卷来维权](../../pages/nsc993/n12994088.md) 
 #### [陈达：逃大难赶早](../../pages/nsc993/n12993569.md) 
-#### [【网海拾贝】共产党靠得住，母猪会上树](../../pages/nsc993/n12990730.md) 
-#### [千百度：中共放开生三胎 网民：“爱谁生谁生”](../../pages/nsc993/n12990644.md) 
-#### [李勇：FBI安邦定国故事（下）](../../pages/nsc993/n12987854.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
