--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,10 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之二十六：“文革”整人四大招](../../pages/nsc1028/n13020689.md) 
+#### [张菁：长征是溃败逃亡还是北上抗日？](../../pages/nsc1028/n13020585.md) 
+#### [苏共出钱出枪换取孙中山接纳中共“借壳上市”](../../pages/nsc1028/n13020354.md) 
+#### [叶书：中共 “红船精神”真相 谎话连篇的党史](../../pages/nsc1028/n13020296.md) 
+#### [【中共党史】中共配合苏联侵略中国（上）](../../pages/nsc1028/n13020167.md) 
 #### [中共罪行录之二十五：87种害人招式](../../pages/nsc1028/n13018945.md) 
 #### [王友群：延安的1万5千个特务是怎么回事？](../../pages/nsc1028/n13016395.md) 
 #### [被遗忘的百年历史（V）2001至2005](../../pages/nsc1028/n13001609.md) 
@@ -25,11 +30,6 @@
 #### [传奇企业家：失败不可怕 吸取教训勇于尝试](../../pages/nsc1028/n12974507.md) 
 #### [中共罪行录之十八：“文革”新贵们的贪腐（上）](../../pages/nsc1028/n12974074.md) 
 #### [中共罪行录之十七：大饥荒中的“荥经惨案”](../../pages/nsc1028/n12971424.md) 
-#### [张菁：文革中各种残酷的“站刑”和“坐刑”](../../pages/nsc1028/n12970477.md) 
-#### [中共罪行录之十六：强迫孩子现场看杀人](../../pages/nsc1028/n12967431.md) 
-#### [中共罪行录之十五：吕正操所部残杀异己](../../pages/nsc1028/n12965097.md) 
-#### [中共罪行录之十四：在太行山区摧毁传统文化](../../pages/nsc1028/n12962619.md) 
-#### [中共罪行录之十三：在河北安国县的勒索和欺诈](../../pages/nsc1028/n12959911.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
