--- a/indexes/nsc993/54.md
+++ b/indexes/nsc993/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】病毒可怕，共产党更可怕！](../../pages/nsc993/n13020728.md) 
 #### [李国涛：希望美国参众两院有正义之举](../../pages/nsc993/n13020674.md) 
 #### [张彼特：给儿子的忠告](../../pages/nsc993/n13018934.md) 
 #### [祝君安：长相思‧躺平乐（外一篇）](../../pages/nsc993/n13018923.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】中共欠全世界一个交代](../../pages/nsc993/n12998706.md) 
 #### [千百度：一位西双版纳建筑商的感恩](../../pages/nsc993/n12998487.md) 
 #### [【网海拾贝】中共砖家把老百姓当成了动物](../../pages/nsc993/n12993483.md) 
-#### [宋征时：我带考卷来维权](../../pages/nsc993/n12994088.md) 
 
 ---
-#### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
+#### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
