--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中东路事件：中共配合苏联侵略中国（下）](../../pages/nsc1028/n13022783.md) 
+#### [中共罪行录之二十七：为句真话劳改15年](../../pages/nsc1028/n13023054.md) 
 #### [中共罪行录之二十六：“文革”整人四大招](../../pages/nsc1028/n13020689.md) 
 #### [张菁：长征是溃败逃亡还是北上抗日？](../../pages/nsc1028/n13020585.md) 
 #### [苏共出钱出枪换取孙中山接纳中共“借壳上市”](../../pages/nsc1028/n13020354.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之二十：“打土豪”](../../pages/nsc1028/n12978961.md) 
 #### [中共罪行录之十九：“文革”新贵们的贪腐（下）](../../pages/nsc1028/n12976431.md) 
 #### [传奇企业家：失败不可怕 吸取教训勇于尝试](../../pages/nsc1028/n12974507.md) 
-#### [中共罪行录之十八：“文革”新贵们的贪腐（上）](../../pages/nsc1028/n12974074.md) 
-#### [中共罪行录之十七：大饥荒中的“荥经惨案”](../../pages/nsc1028/n12971424.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
