--- a/indexes/nsc993/54.md
+++ b/indexes/nsc993/54.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共最有可能是集体坏死](../../pages/nsc993/n13023101.md) 
+#### [界立建：痛心疾首 勿忘六四](../../pages/nsc993/n13022339.md) 
 #### [【网海拾贝】病毒可怕，共产党更可怕！](../../pages/nsc993/n13020728.md) 
 #### [李国涛：希望美国参众两院有正义之举](../../pages/nsc993/n13020674.md) 
 #### [张彼特：给儿子的忠告](../../pages/nsc993/n13018934.md) 
@@ -28,8 +30,6 @@
 #### [曾慧燕：怀念站在历史正确一边的许家屯](../../pages/nsc993/n13000073.md) 
 #### [惠虎宇：三十年河东河西 放大历史视野看六四](../../pages/nsc993/n13000018.md) 
 #### [【网海拾贝】中共欠全世界一个交代](../../pages/nsc993/n12998706.md) 
-#### [千百度：一位西双版纳建筑商的感恩](../../pages/nsc993/n12998487.md) 
-#### [【网海拾贝】中共砖家把老百姓当成了动物](../../pages/nsc993/n12993483.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
