have a nice day!

--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [清竹：著名歌唱家关贵敏的故事](../../pages/nsc1035/n13025435.md) 
+#### [影评：英雄的壮举（上）](../../pages/nsc1035/n13024688.md) 
 #### [李疏影：不能忘却的抗争，和走下去的希望](../../pages/nsc1035/n13022097.md) 
 #### [李田田：减压式生活未必就是消极堕落，由国之大考所想到的](../../pages/nsc1035/n13017621.md) 
 #### [教育家为何担心个人主义衰败胜过原子弹？](../../pages/nsc1035/n13002969.md) 
@@ -28,8 +30,6 @@
 #### [李正宽：三星堆藏密钥 打开尘封历史之锁？](../../pages/nsc1035/n12877650.md) 
 #### [清荷：谁偷走了孩子的心——大陆幼儿园教育有感](../../pages/nsc1035/n12871130.md) 
 #### [读懂《意外》 人生就是一场猝不及防的意外](../../pages/nsc1035/n12869689.md) 
-#### [思韵：邂逅《意外》 发现“意外”的惊喜](../../pages/nsc1035/n12862144.md) 
-#### [觅真：泪水撒在清明节！](../../pages/nsc1035/n12857953.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
