--- a/indexes/nsc993/54.md
+++ b/indexes/nsc993/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共已成世界秩序最大威胁](../../pages/nsc993/n13028138.md) 
 #### [【网海拾贝】色厉内荏的中共百岁党庆](../../pages/nsc993/n13025582.md) 
 #### [李春草：雨中花慢‧三朝国师（外一首）](../../pages/nsc993/n13025567.md) 
 #### [袁斌：广东核电站泄漏，切尔诺贝利2.0？](../../pages/nsc993/n13025475.md) 
@@ -29,7 +30,6 @@
 #### [理悟：计生变奏曲](../../pages/nsc993/n13000414.md) 
 #### [曾慧燕：“六四绿卡”灵魂拷问](../../pages/nsc993/n13000277.md) 
 #### [金言：第三孩未投胎 段子手先出生](../../pages/nsc993/n13000215.md) 
-#### [邵俊：32年前没有喊出的话](../../pages/nsc993/n13000181.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
