--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【美股瞭望】商品行情崩挫 科技股重回主流](../../pages/nsc1026/n13029798.md) 
 #### [【财经话题】当避险资产只剩下黄金上涨时](../../pages/nsc1026/n12975626.md) 
 #### [【谈股论金】比特币正示范金融市场泡沫破灭](../../pages/nsc1026/n12961769.md) 
 #### [数据派：研判财经不能离开信仰大背景](../../pages/nsc1026/n12932684.md) 
@@ -29,7 +30,6 @@
 #### [陈思敏：中国经济“内虚” 北京楼市一叶知秋](../../pages/nsc1026/n12464918.md) 
 #### [【谈股论金】华尔街为何如此喜爱川普](../../pages/nsc1026/n12460691.md) 
 #### [【纪元专栏】加拿大撒大钱 酿大错](../../pages/nsc1026/n12406564.md) 
-#### [【谈股论金】纳指和金价是超涨或泡沫化？](../../pages/nsc1026/n12315192.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
