--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【中共党史】中共配合苏联肢解中国（上）](../../pages/nsc1028/n13030262.md) 
+#### [中共罪行录之二十八：切菜切出反革命](../../pages/nsc1028/n13030600.md) 
+#### [首位文革杀人犯的忏悔：革命逆天、人命关天](../../pages/nsc1028/n13030146.md) 
+#### [被遗忘的百年历史（VI）2001至2021](../../pages/nsc1028/n13001669.md) 
 #### [中东路事件：中共配合苏联侵略中国（下）](../../pages/nsc1028/n13022783.md) 
 #### [中共罪行录之二十七：为句真话劳改15年](../../pages/nsc1028/n13023054.md) 
 #### [中共罪行录之二十六：“文革”整人四大招](../../pages/nsc1028/n13020689.md) 
@@ -26,10 +30,6 @@
 #### [被遗忘的百年历史（I）1920至1950](../../pages/nsc1028/n12986411.md) 
 #### [中共罪行录之二十一：所谓的“清除精神污染”](../../pages/nsc1028/n12987500.md) 
 #### [张菁：她被逼每日吃一顿抹着秽物的窝头](../../pages/nsc1028/n12986487.md) 
-#### [袁斌：“六十一个阶级兄弟”中毒事件真相](../../pages/nsc1028/n12984234.md) 
-#### [中共罪行录之二十：“打土豪”](../../pages/nsc1028/n12978961.md) 
-#### [中共罪行录之十九：“文革”新贵们的贪腐（下）](../../pages/nsc1028/n12976431.md) 
-#### [传奇企业家：失败不可怕 吸取教训勇于尝试](../../pages/nsc1028/n12974507.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
