--- a/indexes/nsc1035/51.md
+++ b/indexes/nsc1035/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [影评：英雄的壮举（下）](../../pages/nsc1035/n13027438.md) 
 #### [影评：英雄的壮举（中）](../../pages/nsc1035/n13027244.md) 
 #### [清竹：著名歌唱家关贵敏的故事](../../pages/nsc1035/n13025435.md) 
 #### [影评：英雄的壮举（上）](../../pages/nsc1035/n13024688.md) 
@@ -29,7 +30,6 @@
 #### [清流：二婶，我就要找一个炼法轮功的女友（上）](../../pages/nsc1035/n12879174.md) 
 #### [尚荷：《意外》观感——一场车祸引发的人生转折](../../pages/nsc1035/n12877867.md) 
 #### [李正宽：三星堆藏密钥 打开尘封历史之锁？](../../pages/nsc1035/n12877650.md) 
-#### [清荷：谁偷走了孩子的心——大陆幼儿园教育有感](../../pages/nsc1035/n12871130.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
