--- a/indexes/nsc993/54.md
+++ b/indexes/nsc993/54.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [唐付民：法制国家的标准](../../pages/nsc993/n13032944.md) 
 #### [【网海拾贝】民主国家结盟对抗中共的新时代](../../pages/nsc993/n13031717.md) 
 #### [吐为快：菩萨蛮](../../pages/nsc993/n13030033.md) 
 #### [【网海拾贝】中共已成世界秩序最大威胁](../../pages/nsc993/n13028138.md) 
@@ -29,7 +30,6 @@
 #### [袁斌：又到六四 网民翻墙到海外网络表达哀思](../../pages/nsc993/n13000995.md) 
 #### [颜纯钩：正义可能迟到，但不会永远缺席](../../pages/nsc993/n13000920.md) 
 #### [万古缘：被血漂起的日子](../../pages/nsc993/n13000914.md) 
-#### [理悟：计生变奏曲](../../pages/nsc993/n13000414.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
