--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [共产党的发展壮大与国民党内右派的反击（一）](../../pages/nsc1028/n13033620.md) 
+#### [王友群：毛泽东的接班人王洪文之死](../../pages/nsc1028/n13032288.md) 
+#### [林辉：行刑时绞刑台上热搜 李大钊叛国罪难掩](../../pages/nsc1028/n13031965.md) 
 #### [【中共党史】中共配合苏联肢解中国（上）](../../pages/nsc1028/n13030262.md) 
 #### [中共罪行录之二十八：切菜切出反革命](../../pages/nsc1028/n13030600.md) 
 #### [首位文革杀人犯的忏悔：革命逆天、人命关天](../../pages/nsc1028/n13030146.md) 
@@ -27,9 +30,6 @@
 #### [王友群：毛泽东的接班人刘少奇之死](../../pages/nsc1028/n12991772.md) 
 #### [被遗忘的百年历史（III）1976至1989](../../pages/nsc1028/n12991962.md) 
 #### [被遗忘的百年历史（II）1950 至1976](../../pages/nsc1028/n12989161.md) 
-#### [被遗忘的百年历史（I）1920至1950](../../pages/nsc1028/n12986411.md) 
-#### [中共罪行录之二十一：所谓的“清除精神污染”](../../pages/nsc1028/n12987500.md) 
-#### [张菁：她被逼每日吃一顿抹着秽物的窝头](../../pages/nsc1028/n12986487.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
