--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [共产党的发展壮大与国民党内右派的反击（二）](../../pages/nsc1028/n13033683.md) 
+#### [再现历史中的浮士德故事](../../pages/nsc1028/n13034638.md) 
+#### [叶书：中共百年“党罄” 高官叛逃吹响末日前奏](../../pages/nsc1028/n13034811.md) 
+#### [叶书：邓拓愚忠的遗言与江青“免责”辩护词](../../pages/nsc1028/n13033754.md) 
 #### [共产党的发展壮大与国民党内右派的反击（一）](../../pages/nsc1028/n13033620.md) 
 #### [王友群：毛泽东的接班人王洪文之死](../../pages/nsc1028/n13032288.md) 
 #### [林辉：行刑时绞刑台上热搜 李大钊叛国罪难掩](../../pages/nsc1028/n13031965.md) 
@@ -26,10 +30,6 @@
 #### [高僧：你办案时心里真有国法吗？](../../pages/nsc1028/n13002424.md) 
 #### [韩战时美国排华风暴 纽约华人曾如何应付危局](../../pages/nsc1028/n13002345.md) 
 #### [王友群：毛泽东的接班人林彪之死](../../pages/nsc1028/n12997401.md) 
-#### [中共罪行录之二十二：少年“反革命”](../../pages/nsc1028/n12998426.md) 
-#### [王友群：毛泽东的接班人刘少奇之死](../../pages/nsc1028/n12991772.md) 
-#### [被遗忘的百年历史（III）1976至1989](../../pages/nsc1028/n12991962.md) 
-#### [被遗忘的百年历史（II）1950 至1976](../../pages/nsc1028/n12989161.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
