have a nice day!

--- a/indexes/nsc993/54.md
+++ b/indexes/nsc993/54.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】共产党就是活生生的邪灵](../../pages/nsc993/n13036627.md) 
+#### [魏京生：中美俄新三角关系](../../pages/nsc993/n13035986.md) 
+#### [东方觉：奇闻奇事 雷人雷语](../../pages/nsc993/n13035878.md) 
 #### [罗慰年：韭菜与镰刀](../../pages/nsc993/n13034374.md) 
 #### [关乐：韩战前后（下）](../../pages/nsc993/n13034113.md) 
 #### [郑纯清：科学靠不住 免疫在漂红](../../pages/nsc993/n13034093.md) 
@@ -27,9 +30,6 @@
 #### [千百度：是谁把海归博士姜文华逼成了杀人犯](../../pages/nsc993/n13015218.md) 
 #### [【网海拾贝】内卷与躺平：中国的时代图腾](../../pages/nsc993/n13016128.md) 
 #### [【网海拾贝】中共如何影响各国的报导](../../pages/nsc993/n13012599.md) 
-#### [【网海拾贝】有一个地方的记忆 你怎么也抹不掉](../../pages/nsc993/n13009802.md) 
-#### [古风：中共企图通过假美钞搞乱美国金融市场](../../pages/nsc993/n13009626.md) 
-#### [【网海拾贝】反共是最大的政治正确](../../pages/nsc993/n13007051.md) 
 
 ---
 #### 第 [ [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) ] 页
