--- a/indexes/nsc1028/52.md
+++ b/indexes/nsc1028/52.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [美国国父的教导：从历史中吸取无穷智慧](../../pages/nsc1028/n13036965.md) 
+#### [中共罪行录之二十九：没头的尸体一大片](../../pages/nsc1028/n13036513.md) 
+#### [林辉：中共三名高官叛逃带来的重创](../../pages/nsc1028/n13035206.md) 
+#### [【中共党史】中共配合苏联肢解中国（下）](../../pages/nsc1028/n13035660.md) 
 #### [共产党的发展壮大与国民党内右派的反击（二）](../../pages/nsc1028/n13033683.md) 
 #### [再现历史中的浮士德故事](../../pages/nsc1028/n13034638.md) 
 #### [叶书：中共百年“党罄” 高官叛逃吹响末日前奏](../../pages/nsc1028/n13034811.md) 
@@ -26,10 +30,6 @@
 #### [【中共党史】建党的罪恶本质：苏联豢养](../../pages/nsc1028/n13011888.md) 
 #### [中共罪行录之二十三：三年级的“地主分子”](../../pages/nsc1028/n13009729.md) 
 #### [李勇：历史秘闻——张学良自评历史功过](../../pages/nsc1028/n13004467.md) 
-#### [张菁：中共“长征”中的绑票筹款亲历者](../../pages/nsc1028/n13003575.md) 
-#### [高僧：你办案时心里真有国法吗？](../../pages/nsc1028/n13002424.md) 
-#### [韩战时美国排华风暴 纽约华人曾如何应付危局](../../pages/nsc1028/n13002345.md) 
-#### [王友群：毛泽东的接班人林彪之死](../../pages/nsc1028/n12997401.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
